      without getting an Exception.
    - Added the MapMappers JdbiConfig class to configure column name case changes, preferred over
      the old boolean toggle.
    - ColumnNameMatcher.columnNameStartsWith() method, used by reflection mappers to short-circuit
      nested mappings when no columns start with the nested prefix.
  - Improvements
    - SqlObject no longer transforms non-Runtime exceptions (slightly breaking change)
    - Use MethodHandles over Reflection to additionally do less exception wrapping / transformation
    - Skip unused string formatting for performance
    - Spring FactoryBean better singleton support
    - KotlinMapper respects constructor annotations, lateinit improvements
    - Behavioral fixes in Argument binding where the number of provided Arguments differs from the
      expected number.
    - Optional mapping of @Nested objects when using BeanMapper, ConstructorMapper, FieldMapper, or
      KotlinMapper. @Nested objects are only mapped when the result set contains columns that match
      the nested object.
    - ConstructorMapper allows constructor parameters annotated @Nullable to be missing from the
      result set. Any annotation named "Nullable" from any package may be used.
    - jdbi3-testing artifact has pg dependencies marked as optional, in case you e.g. only want h2
      or oracle
    - LocalTransactionHandler: rollback on thrown Throwable
    - test on openjdk11

3.4.0
    [ NOTE: this release's git tags are missing due to maintainer error! ]
  - New API
    - StatementException.getShortMessage
    - SqlStatements.setQueryTimeout(int) to configure the JDBC Statement queryTimeout.
  - Bug Fixes
    - Bridge methods cause SqlObject exceptions to get wrapped in `InvocationTargetException`
    - Ignore static methods on SqlObject types
  - Improvements
    - Handle `null` values in defined attributes

3.3.0
  - New API
    - SerializableTransactionRunner.setOnFailure(), setOnSuccess() methods allow callbacks to be