@@ -26,11 +26,13 @@ import java.sql.SQLException;
 import java.sql.Time;
 import java.sql.Timestamp;
 import java.util.Arrays;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
+
 import org.jdbi.v3.core.Handle;
 import org.jdbi.v3.core.argument.Argument;
 import org.jdbi.v3.core.argument.Arguments;
@@ -1268,6 +1270,8 @@ public abstract class SqlStatement<This extends SqlStatement<This>> extends Base
     }
 
     /**
+     * For each value given, create a tuple by invoking each given method in order, and bind the tuple into
+     * a {@code VALUES (...)} format insert clause.
      * @param key attribute name
      * @param values list of values that will be comma-spliced into the defined attribute value
      * @param methodNames list of methods that will be invoked on the values
@@ -1275,8 +1279,9 @@ public abstract class SqlStatement<This extends SqlStatement<This>> extends Base
      * @throws IllegalArgumentException if the list of values or properties is empty.
      * @throws UnableToCreateStatementException if the method cannot be found
      */
-    public final This bindMethodsList(String key, List<?> values, List<String> methodNames) throws UnableToCreateStatementException {
-        if (values.isEmpty()) {
+    public final This bindMethodsList(String key, Iterable<?> values, List<String> methodNames) throws UnableToCreateStatementException {
+        final Iterator<?> valueIter = values.iterator();
+        if (!valueIter.hasNext()) {
             throw new IllegalArgumentException(
                 getClass().getSimpleName() + ".bindMethodsList was called with no values.");
         }
@@ -1286,15 +1291,15 @@ public abstract class SqlStatement<This extends SqlStatement<This>> extends Base
                 getClass().getSimpleName() + ".bindMethodsList was called with no values.");
         }
 
-        StringBuilder names = new StringBuilder();
-        StatementContext ctx = getContext();
-        for (int valueIndex = 0; valueIndex < values.size(); valueIndex++) {
+        final StringBuilder names = new StringBuilder();
+        final StatementContext ctx = getContext();
+        for (int valueIndex = 0; valueIter.hasNext(); valueIndex++) {
             if (valueIndex > 0) {
                 names.append(',');
             }
 
-            Object bean = values.get(valueIndex);
-            ObjectMethodArguments beanMethods = new ObjectMethodArguments(null, bean);
+            final Object bean = valueIter.next();
+            final ObjectMethodArguments beanMethods = new ObjectMethodArguments(null, bean);
 
             names.append("(");
             for (int methodIndex = 0; methodIndex < methodNames.size(); methodIndex++) {
@@ -1302,10 +1307,10 @@ public abstract class SqlStatement<This extends SqlStatement<This>> extends Base
                     names.append(",");
                 }
 
-                String methodName = methodNames.get(methodIndex);
-                String name = key + valueIndex + "." + methodName;
+                final String methodName = methodNames.get(methodIndex);
+                final String name = key + valueIndex + "." + methodName;
                 names.append(":").append(name);
-                Argument argument = beanMethods.find(methodName, ctx)
+                final Argument argument = beanMethods.find(methodName, ctx)
                     .orElseThrow(() -> new UnableToCreateStatementException("Unable to get " + methodName + " argument for " + bean, ctx));
                 bind(name, argument);
             }
